[package]
name = "counter"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
alloy-primitives = "0.5.2"
alloy-sol-types = "0.3.1"
stylus-sdk = "0.4.2"
hex = "0.4.3"
wee_alloc = "0.4.5"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }
ethers = "2.0.11"
eyre = "0.6.9"

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "counter"
path = "main.rs"

[lib]
path = "lib.rs"
crate-type = ["lib", "cdylib"]

[[example]]
name = "interactions"
path = "../../examples/counter.rs"
